www/templates/html/css/search_results.css
/*********************************

Autocomplete CSS

*********************************/
#ui-id-1, #ui-id-2 {
    position: relative;
    background-image: none; 
    background-color: rgba(255, 255, 255, 0.95);
    padding: 0;
    border: 1px solid #eee;
    border-radius: 0;
    box-shadow: 2px 4px 8px -2px rgba(0, 0, 0, 0.1);
}

.ui-autocomplete {
	max-width:434px;
	margin:-5px 0 0 4px;
	border-top:rgba(185, 185, 185, 0.26);color:#494949;
	font-size:60%;
	font-style:normal;
	font-family: "Lucida Grande",Verdana,Arial;
	font-variant:normal;
	font-weight:normal;
	line-height:110%;
	text-align:left;
}
.ui-autocomplete .course {
    margin-left: 2px;
}
.ui-autocomplete a span.format {
    display: block;
	font-size: 100%;
    font-weight: bold;
    padding: 5px 10px;
}
#ui-id-1.ui-autocomplete > li,
#ui-id-2.ui-autocomplete > li {
    display: table;
	padding: 0px;
}
#ui-id-1.ui-autocomplete > li > a,
#ui-id-2.ui-autocomplete > li > a {
	display:block;
    padding: 8px 2px;
	border-bottom:1px dashed #d6d6d6;
}
#ui-id-1.ui-autocomplete > li:last-child > a,
#ui-id-2.ui-autocomplete > li:last-child > a {
    border-bottom: none;
}
.ui-autocomplete a .number,
.ui-autocomplete a .format {
    color: #494949;
}
.ui-autocomplete a.indicator .title,
.ui-autocomplete a.indicator .format { 
    color: #fff;
}
.ui-autocomplete a.indicator { 
	background: #80c662; 
	border: none;
    border-radius: 0;
	cursor: pointer;
}
.ui-autocomplete .courseID,
.ui-autocomplete dt.course .title {
    display: table-cell;
}
.ui-autocomplete .courseID {
    float: none;
    font-size: 50%;
}
.ui-autocomplete dt .number, .ui-autocomplete dt .subjectCode {
	min-width:40px;
	text-align: center;
}
.ui-autocomplete dt .subjectCode {
	margin-bottom:2px;	
	font-size:80%;
}
.ui-autocomplete dt.course .title {
	border: none;
	line-height: 100%;
	padding-top: 6px;
    padding-left: 10px;	
    font-size: 0.85em;
    vertical-align: middle;
}

/*

2012 Combo Search

*/

#search_forms, #search_forms:before, #search_forms:after {
    background: #f1f1f1;
    box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.035);
}
#search_forms {
    position: relative;
    color: #45555F;
    padding: 10px;
    margin-bottom: 2em;
    z-index: 1;
}
#search_forms:before, #search_forms:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    width: 9999px;   /* some huge width */
    z-index: -1;
}
#search_forms:before {
  right: 100%; 
}
#search_forms:after {
  left: 100%;
}
#maincontent #search_forms h3 {
    line-height: 145%;
    padding-left: 0.5%;
    margin-top: 0.5em;
}
#search_forms .option {
    padding: 0.02em 0.25em;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    cursor: pointer;
    background: #ffffff;
    color: #3A484F;
    -webkit-transition: color .2s;
    -moz-transition: color .2s;
    -o-transition: color .2s;
    -ms-transition: color .2s;
    transition: color .2s;
}
#search_forms .option:hover {
    color: #608EEE;
}
#search_forms .option.active,
#search_forms .option.active:hover {
    background: #608EEE;
    color: #fff;
    cursor: default;
}
#search_forms input[type="submit"] {
    background: #80c662;
    color: #fff;
}

#search_forms legend {
    display: none;
}
#search_forms fieldset, .search_help {
    width: 99%;
    background: #e6e6e6;
    padding: 0.5%;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    position: relative;
    margin-top: 1em;
}
#search_forms input[type="text"], #search_forms input[type="submit"], #search_forms label{
    height: 2.1em;
    font-size: 1.4em;
    border-radius: 4px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    margin: 0;
    padding: 0.3em 4% 0.3em 1%;
    border: none;
}
#search_forms input[type="text"] {
    background: #fff;
    border: none;
    width: 93%;
}

#majorform {
	display:none;
}

#search_forms label {
    display:none;
}
#search_forms input:focus{
    outline: none;
}
#search_forms input[type="submit"] {
    position: absolute;
    font-size-adjust: 0.45; /* a -moz only (at this time) property to control font rendering */
    right: 0.5%;
    cursor: pointer;
    -webkit-border-radius: 0 4px 4px 0;
    -moz-border-radius: 0 4px 4px 0;
    border-radius: 0 4px 4px 0;
    padding: 0.3em 0.75em;
}
#search_forms input[type="submit"]:hover {
    background-color: #8FDA70;
}
#search_forms input[type="submit"]:active {
    background-color: #79B85E;
    color: #f0f0f0;
}

#courseform {
    overflow: hidden;
}

.search_help {
    margin: 1.5em 3%;
    width: 69%;
    padding: 1%;
    font-size: 80%;
    position: absolute;
    line-height: 0;
    opacity: 0;
    -webkit-transition: all .25s;
    -moz-transition: all .25s;
    -o-transition: all .25s;
    -ms-transition: all .25s;
    transition: all .25s;
}
.search_help:after {
    position: absolute;
    content: '';
    width: 0px;
    height: 0px;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #e6e6e6;
    top: -10px;
}
.search_help.open {
    position: relative;
    line-height: 22px;
    opacity: 1;
}

/*

Form overrides

*/

#courseSearchResults
{
    background-color:#EEE;
}

#courseSearchResults .description,
#courseSearchResults .prereqs,
#courseSearchResults .notes,
#courseSearchResults .details {
    display:none;
}

#maincontent form.filters label span.count {
	color:#555;
	font-size:0.8em;
	font-style:italic;
}

